--- a/index.html
+++ b/index.html
@@ -111,7 +111,24 @@ main{
   position:absolute;right:16px;top:16px;background:none;border:none;
   color:white;font-size:22px;cursor:pointer;
 }
-.modal .meta{font-size:14px;opacity:.95;margin-bottom:10px;}
+.modal h3 {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 6px;
+  text-align: left;
+  color: #fff;
+}
+.modal .meta {
+  font-size: 14px;
+  opacity: .95;
+  margin-bottom: 6px;
+  line-height: 1.4;
+}
+.modal hr {
+  margin: 10px 0 14px 0;
+  border: none;
+  border-top: 1px solid rgba(255, 255, 255, 0.15);
+}
 .modal img.main{
   width:100%;
   aspect-ratio:3/2;
