--- a/index.html
+++ b/index.html
@@ -146,8 +146,10 @@ main{
 .modal .povidani {
   font-size: 14px;
   opacity: .95;
-  margin-top: 4px;
-  line-height: 1.5;
+  margin-top: 10px;
+  margin-bottom: 6px;
+  padding: 0 6px;
+  line-height: 1.55;
   text-align: justify;
 }
 footer{text-align:center;color:rgba(255,255,255,0.6);padding:30px 0;}
@@ -459,7 +461,7 @@ function show(route){
   sections.forEach(s=>s.hidden=(s.id!==route));
   btns.forEach(b=>b.classList.toggle('active',b.dataset.route===route));
   history.replaceState(null,'','#'+route);
-  window.scrollTo(0,0);
+  requestAnimationFrame(()=>window.scrollTo({top:0,behavior:"instant"}));
 }
 btns.forEach(b=>b.addEventListener('click',()=>show(b.dataset.route)));
 window.addEventListener('popstate',()=>show(location.hash.substring(1)||'koruna'));
