--- a/index.html
+++ b/index.html
@@ -373,157 +373,196 @@ const alpyData = [
 /* ---------- Data: Nepál ---------- */
 const nepalData = Array.from({length:40},(_,i)=>({idx:i,title:`Nepál ${i+1}`,img:imgNepal(i+1)}));
 
-/* --- Modal --- */
-const modal=document.getElementById('modal-backdrop');
-const modalContent=document.getElementById('modal-content');
-function closeModal(){
+/* --- Modal funkce --- */
+const modal = document.getElementById('modal-backdrop');
+const modalContent = document.getElementById('modal-content');
+
+function closeModal() {
   modal.classList.remove('show');
   modal.querySelector('.modal').classList.remove('fullscreen');
-  setTimeout(()=>{modal.hidden=true;modalContent.innerHTML='';document.body.style.overflow='';},180);
+  setTimeout(() => {
+    modal.hidden = true;
+    modalContent.innerHTML = '';
+    document.body.style.overflow = '';
+  }, 180);
 }
-function openModal(html,isFullscreen=false){
-  const box=modal.querySelector('.modal');
-  box.classList.toggle('fullscreen',isFullscreen);
-  modalContent.innerHTML=html;
-  modal.hidden=false;
-  requestAnimationFrame(()=>{modal.classList.add('show');document.body.style.overflow='hidden';});
+
+function openModal(html, isFullscreen = false) {
+  const box = modal.querySelector('.modal');
+  box.classList.toggle('fullscreen', isFullscreen);
+  modalContent.innerHTML = html;
+  modal.hidden = false;
+  requestAnimationFrame(() => {
+    modal.classList.add('show');
+    document.body.style.overflow = 'hidden';
+  });
 }
-modal.addEventListener('click',e=>{if(e.target===modal)closeModal();});
+
+modal.addEventListener('click', e => {
+  if (e.target === modal) closeModal();
+});
 
 /* --- Detail: Koruna / Alpy --- */
 function showDetail(data, i, imgFn) {
   const it = data[i];
-  const povidaniText = it.povidani && it.povidani.trim() !== "" 
-    ? it.povidani 
+  const povidaniText = it.povidani && it.povidani.trim() !== ""
+    ? it.povidani
     : "Popis výstupu bude ještě doplněn";
 
   const meta = [
-  it.z ? `<div>Země:</div><div>${it.z}</div>` : "",
-  it.d ? `<div>Datum výstupu:</div><div>${it.d}</div>` : "",
-  it.cas ? `<div>Čas výstupu:</div><div>${it.cas}</div>` : "",
-  it.team ? `<div>Tým:</div><div>${it.team}</div>` : "",
-  it.obt ? `<div>Obtížnost:</div><div>${it.obt}</div>` : "",
-  it.pohori ? `<div>Pohoří:</div><div>${it.pohori}</div>` : ""
-].join("");
+    it.z ? `<div>Země:</div><div>${it.z}</div>` : "",
+    it.d ? `<div>Datum výstupu:</div><div>${it.d}</div>` : "",
+    it.cas ? `<div>Čas výstupu:</div><div>${it.cas}</div>` : "",
+    it.team ? `<div>Tým:</div><div>${it.team}</div>` : "",
+    it.obt ? `<div>Obtížnost:</div><div>${it.obt}</div>` : "",
+    it.pohori ? `<div>Pohoří:</div><div>${it.pohori}</div>` : ""
+  ].join("");
+
+  const imgsHTML = (it.imgs && it.imgs.length)
+    ? `<div class="modal-img-grid">${it.imgs.map(n =>
+        `<img class="main" src="${imgFn(n)}" alt="${it.hora}">`
+      ).join("")}</div>`
+    : `<img class="main" src="${imgFn(i + 1)}" alt="${it.hora}">`;
 
   openModal(`
     <button class="modal-close" onclick="closeModal()">✕</button>
     <h3>${it.p}/${data.length} – ${it.hora} ${it.v ? `${it.v} m` : ""}</h3>
     <hr>
     <div class="meta-grid">${meta}</div>
-    <img class="main" src="${imgFn(i + 1)}" alt="${it.hora}">
+    ${imgsHTML}
     <div class="povidani">${povidaniText}</div>
   `);
 }
 
-/* --- Karty --- */
-function cardKoruna(it,i){
-  const el=document.createElement('div');
-  el.className='photo-card';
-  el.innerHTML=`<img class="photo" src="${imgKoruna(i+1)}">
-  <div class="photo-overlay">
-    <div class="photo-title">${it.p}. ${it.hora} ${it.v?`${it.v} m`:""}</div>
-    <div class="photo-sub">${it.z||""} ${it.d||""}</div>
-  </div>`;
-  el.onclick=()=>showDetail(korunaData,i,imgKoruna);
-  return el;
+/* --- Galerie render --- */
+function renderGallery(el, data, fn) {
+  el.innerHTML = '';
+  data.forEach((it, i) => el.appendChild(fn(it, i)));
 }
-function cardAlpy(it,i){
-  const el=document.createElement('div');
-  el.className='photo-card';
-  el.innerHTML=`<img class="photo" src="${imgAlpy(i+1)}">
-  <div class="photo-overlay">
-    <div class="photo-title">${it.p}. ${it.hora} ${it.v?`${it.v} m`:""}</div>
-    <div class="photo-sub">${it.z||""} ${it.d||""}</div>
-  </div>`;
-  el.onclick=()=>showDetail(alpyData,i,imgAlpy);
-  return el;
-}
-function cardSimple(it,i){
-  const el=document.createElement('div');
-  el.className='photo-card';
-  el.innerHTML=`<img class="photo" src="${it.img}">
-  <div class="photo-overlay"><div class="photo-title">${it.title}</div></div>`;
-  el.onclick=()=>openNepalModal(i);
+
+function cardKoruna(it, i) {
+  const el = document.createElement('div');
+  el.className = 'photo-card';
+  el.innerHTML = `
+    <img class="photo" src="${imgKoruna(i + 1)}">
+    <div class="photo-overlay">
+      <div class="photo-title">${it.p}. ${it.hora} ${it.v ? `${it.v} m` : ""}</div>
+      <div class="photo-sub">${it.z || ""} ${it.d || ""}</div>
+    </div>`;
+  el.onclick = () => showDetail(korunaData, i, imgKoruna);
   return el;
 }
 
-/* --- Galerie render --- */
-function renderGallery(el,data,fn){el.innerHTML='';data.forEach((it,i)=>el.appendChild(fn(it,i)));}
-renderGallery(document.getElementById('koruna-gallery'),korunaData,cardKoruna);
-renderGallery(document.getElementById('alpy-gallery'),alpyData,cardAlpy);
-renderGallery(document.getElementById('nepal-gallery'),nepalData,cardSimple);
+function cardAlpy(it, i) {
+  const el = document.createElement('div');
+  el.className = 'photo-card';
+  el.innerHTML = `
+    <img class="photo" src="${imgAlpy(i + 1)}">
+    <div class="photo-overlay">
+      <div class="photo-title">${it.p}. ${it.hora} ${it.v ? `${it.v} m` : ""}</div>
+      <div class="photo-sub">${it.z || ""} ${it.d || ""}</div>
+    </div>`;
+  el.onclick = () => showDetail(alpyData, i, imgAlpy);
+  return el;
+}
+
+function cardSimple(it, i) {
+  const el = document.createElement('div');
+  el.className = 'photo-card';
+  el.innerHTML = `
+    <img class="photo" src="${it.img}">
+    <div class="photo-overlay">
+      <div class="photo-title">${it.title}</div>
+    </div>`;
+  el.onclick = () => openNepalModal(i);
+  return el;
+}
+
+renderGallery(document.getElementById('koruna-gallery'), korunaData, cardKoruna);
+renderGallery(document.getElementById('alpy-gallery'), alpyData, cardAlpy);
+renderGallery(document.getElementById('nepal-gallery'), nepalData, cardSimple);
 
 /* --- Navigace --- */
-const btns=document.querySelectorAll('.btn');
-const sections=document.querySelectorAll('[data-route-content]');
-function show(route){
-  sections.forEach(s=>s.hidden=(s.id!==route));
-  btns.forEach(b=>b.classList.toggle('active',b.dataset.route===route));
-  history.replaceState(null,'','#'+route);
-  requestAnimationFrame(()=>window.scrollTo({top:0,behavior:"instant"}));
+const btns = document.querySelectorAll('.btn');
+const sections = document.querySelectorAll('[data-route-content]');
+
+function show(route) {
+  sections.forEach(s => s.hidden = (s.id !== route));
+  btns.forEach(b => b.classList.toggle('active', b.dataset.route === route));
+  history.replaceState(null, '', '#' + route);
+  requestAnimationFrame(() => window.scrollTo({ top: 0, behavior: "instant" }));
 }
-btns.forEach(b=>b.addEventListener('click',()=>show(b.dataset.route)));
-window.addEventListener('popstate',()=>show(location.hash.substring(1)||'koruna'));
-show(location.hash?location.hash.substring(1):'koruna');
+
+btns.forEach(b => b.addEventListener('click', () => show(b.dataset.route)));
+window.addEventListener('popstate', () => show(location.hash.substring(1) || 'koruna'));
+show(location.hash ? location.hash.substring(1) : 'koruna');
 
 /* --- Nepál fullscreen --- */
-let nepalIndex=0;
-function openNepalModal(i){
-  nepalIndex=i;
+let nepalIndex = 0;
+function openNepalModal(i) {
+  nepalIndex = i;
   openModal(`
     <button class="nav-arrow left" id="nav-left">❮</button>
     <button class="nav-arrow right" id="nav-right">❯</button>
     <h3 id="nepal-title"></h3>
     <button class="modal-close" id="modal-close">✕</button>
     <img class="main fade" id="nepal-main" src="">
-  `,true);
-  document.getElementById('modal-close').onclick=closeModal;
-  document.getElementById('nav-left').onclick=e=>{e.stopPropagation();changeNepal(-1);};
-  document.getElementById('nav-right').onclick=e=>{e.stopPropagation();changeNepal(1);};
+  `, true);
+  document.getElementById('modal-close').onclick = closeModal;
+  document.getElementById('nav-left').onclick = e => { e.stopPropagation(); changeNepal(-1); };
+  document.getElementById('nav-right').onclick = e => { e.stopPropagation(); changeNepal(1); };
   updateNepalModal(true);
 }
-function changeNepal(dir){nepalIndex=(nepalIndex+dir+nepalData.length)%nepalData.length;updateNepalModal();}
-function updateNepalModal(first=false){
-  const it=nepalData[nepalIndex];
-  const img=document.getElementById('nepal-main');
-  const title=document.getElementById('nepal-title');
-  if(!first){img.classList.remove('show');}
-  setTimeout(()=>{
-    img.src=it.img;
-    title.textContent=`Nepál (${nepalIndex+1}/${nepalData.length})`;
-    img.onload=()=>img.classList.add('show');
-  },first?0:150);
+
+function changeNepal(dir) {
+  nepalIndex = (nepalIndex + dir + nepalData.length) % nepalData.length;
+  updateNepalModal();
+}
+
+function updateNepalModal(first = false) {
+  const it = nepalData[nepalIndex];
+  const img = document.getElementById('nepal-main');
+  const title = document.getElementById('nepal-title');
+  if (!first) img.classList.remove('show');
+  setTimeout(() => {
+    img.src = it.img;
+    title.textContent = `${it.title} (${nepalIndex + 1}/${nepalData.length})`;
+    img.onload = () => img.classList.add('show');
+  }, first ? 0 : 150);
 }
 
 /* --- Gesta + klávesnice --- */
-let touchStartX=0,touchEndX=0,touchStartY=0,touchEndY=0;
-document.addEventListener("touchstart",e=>{
-  touchStartX=e.changedTouches[0].screenX;
-  touchStartY=e.changedTouches[0].screenY;
-},false);
-document.addEventListener("touchend",e=>{
-  touchEndX=e.changedTouches[0].screenX;
-  touchEndY=e.changedTouches[0].screenY;
+let touchStartX = 0, touchEndX = 0, touchStartY = 0, touchEndY = 0;
+
+document.addEventListener("touchstart", e => {
+  touchStartX = e.changedTouches[0].screenX;
+  touchStartY = e.changedTouches[0].screenY;
+}, false);
+
+document.addEventListener("touchend", e => {
+  touchEndX = e.changedTouches[0].screenX;
+  touchEndY = e.changedTouches[0].screenY;
   handleGesture();
-},false);
-function handleGesture(){
-  if(!modal.classList.contains("show"))return;
-  const dx=touchEndX-touchStartX;
-  const dy=touchEndY-touchStartY;
-  if(Math.abs(dx)>Math.abs(dy)){
-    if(Math.abs(dx)>50){dx>0?changeNepal(-1):changeNepal(1);}
-  }else{
-    if(Math.abs(dy)>60){closeModal();}
+}, false);
+
+function handleGesture() {
+  if (!modal.classList.contains("show")) return;
+  const dx = touchEndX - touchStartX;
+  const dy = touchEndY - touchStartY;
+  if (Math.abs(dx) > Math.abs(dy)) {
+    if (Math.abs(dx) > 50) dx > 0 ? changeNepal(-1) : changeNepal(1);
+  } else {
+    if (Math.abs(dy) > 60) closeModal();
   }
 }
-document.addEventListener('keydown',e=>{
-  const box=modal.querySelector('.modal');
-  if(!modal.classList.contains('show'))return;
-  if(box.classList.contains('fullscreen')){
-    if(e.key==='ArrowLeft')changeNepal(-1);
-    else if(e.key==='ArrowRight')changeNepal(1);
-    else if(e.key==='Escape')closeModal();
+
+document.addEventListener('keydown', e => {
+  const box = modal.querySelector('.modal');
+  if (!modal.classList.contains('show')) return;
+  if (box.classList.contains('fullscreen')) {
+    if (e.key === 'ArrowLeft') changeNepal(-1);
+    else if (e.key === 'ArrowRight') changeNepal(1);
+    else if (e.key === 'Escape') closeModal();
   }
 });
 </script>
