--- a/index.html
+++ b/index.html
@@ -252,49 +252,49 @@ const imgNepal=i=>`${RAW}/Nepal/Nepal${String(i).padStart(2,'0')}.jpg`;
 /* ---------- Data: Koruna Evropy ----------
    (ponecháno jako dřív, můžeš doplňovat imgs:[…] kde chceš) */
 const korunaData = [
-  {p:"1",hora:"Mont Blanc",v:"4 807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič,    2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",povidani:"",imgs:[1,2,3,4]},
-  {p:"2",hora:"Dufourspitze",v:"4 634",z:"Švýcarsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"3",hora:"Grossglockner",v:"3 798",z:"Rakousko",d:"30. 6. 2025",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"4",hora:"Mulhacén",v:"3 479",z:"Španělsko",d:"10. 9. 2022",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"5",hora:"Zugspitze",v:"2 962",z:"Německo",d:"21. 6. 2025",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"6",hora:"Coma Pedrosa",v:"2 942",z:"Andorra",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"7",hora:"Musala",v:"2 925",z:"Bulharsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"8",hora:"Mytikas",v:"2 917",z:"Řecko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"9",hora:"Triglav",v:"2 864",z:"Slovinsko",d:"25. 7. 2022",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"10",hora:"Velký Korab",v:"2 764",z:"Albánie / Makedonie",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"11",hora:"Gerlachovský štít",v:"2 655",z:"Slovensko",d:"24. 7. 2021",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"12",hora:"Vorder Grauspitz",v:"2 599",z:"Lichtenštejnsko",d:"6. 9. 2025",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"13",hora:"Moldoveanu",v:"2 544",z:"Rumunsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"14",hora:"Zla Kolata",v:"2 534",z:"Černá Hora",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"15",hora:"Rysy",v:"2 499",z:"Polsko",d:"21. 9. 2024",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"16",hora:"Galdhøpiggen",v:"2 469",z:"Norsko",d:"7. 7. 2022",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"17",hora:"Bosanski Maglić",v:"2 386",z:"Bosna a Hercegovina",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"18",hora:"Midžur",v:"2 169",z:"Srbsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"19",hora:"Hvannadalshnjúkur",v:"2 110",z:"Island",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"20",hora:"Kebnekaise",v:"2 103",z:"Švédsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"21",hora:"Hoverla",v:"2 061",z:"Ukrajina",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"22",hora:"Torre",v:"1 993",z:"Portugalsko",d:"28. 3. 2025",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"23",hora:"Narodnaja",v:"1 895",z:"Rusko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"24",hora:"Sinjal",v:"1 831",z:"Chorvatsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"25",hora:"Sněžka",v:"1 603",z:"Česko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"26",hora:"Ben Nevis",v:"1 344",z:"Spojené království",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"27",hora:"Halti",v:"1 324",z:"Finsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"28",hora:"Carrauntoohil",v:"1 041",z:"Irsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"29",hora:"Mahya Dağı",v:"1 031",z:"Turecko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"30",hora:"Kékes",v:"1 014",z:"Maďarsko",d:"17. 8. 2023",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"31",hora:"Monte Titano",v:"756",z:"San Marino",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"32",hora:"Signal de Botrange",v:"694",z:"Belgie",d:"6. 10. 2024",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"33",hora:"Kneiff",v:"560",z:"Lucembursko",d:"6. 10. 2024",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"34",hora:"Dealul Bălănești",v:"430",z:"Moldavsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"35",hora:"Dzjaržynskaja hara",v:"345",z:"Bělorusko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"36",hora:"Vaalserberg",v:"322",z:"Nizozemsko",d:"6. 10. 2024",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"37",hora:"Suur Munamägi",v:"318",z:"Estonsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"38",hora:"Gaiziņkalns",v:"312",z:"Lotyšsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"39",hora:"Aukštojas",v:"294",z:"Litva",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"40",hora:"Ta' Dmejrek",v:"253",z:"Malta",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"41",hora:"Møllehøj",v:"171",z:"Dánsko",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"42",hora:"Chemin des Révoires",v:"161",z:"Monako",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""},
-  {p:"43",hora:"Vatikánské zahrady",v:"75",z:"Vatikán",d:"",cas:"",team:"",obt:"",pohori:"",povidani:""}
+{p:"1",hora:"Mont Blanc",v:"4807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[1,2,3,4],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"2",hora:"Dufourspitze",v:"4634",z:"Švýcarsko",d:"",cas:"",team:"",obt:"",pohori:"Monte Rosa",imgs:[5,6],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"3",hora:"Grossglockner",v:"3798",z:"Rakousko",d:"30. 6. 2025",cas:"",team:"Karel, Honza",obt:"B",pohori:"Vysoké Taury",imgs:[7,8],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"4",hora:"Mulhacén",v:"3479",z:"Španělsko",d:"10. 9. 2022",cas:"",team:"Karel, Radka",obt:"A",pohori:"Sierra Nevada",imgs:[9],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"5",hora:"Zugspitze",v:"2962",z:"Německo",d:"21. 6. 2025",cas:"",team:"",obt:"",pohori:"Wetterstein",imgs:[10,11],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"6",hora:"Coma Pedrosa",v:"2942",z:"Andorra",imgs:[12],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"7",hora:"Musala",v:"2925",z:"Bulharsko",imgs:[13,14],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"8",hora:"Mytikas",v:"2917",z:"Řecko",imgs:[15,16],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"9",hora:"Triglav",v:"2864",z:"Slovinsko",d:"25. 7. 2022",imgs:[17,18],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"10",hora:"Velký Korab",v:"2764",z:"Albánie / Makedonie",imgs:[19],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"11",hora:"Gerlachovský štít",v:"2655",z:"Slovensko",d:"24. 7. 2021",imgs:[20,21],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"12",hora:"Vorder Grauspitz",v:"2599",z:"Lichtenštejnsko",d:"6. 9. 2025",imgs:[22,23],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"13",hora:"Moldoveanu",v:"2544",z:"Rumunsko",imgs:[24,25],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"14",hora:"Zla Kolata",v:"2534",z:"Černá Hora",imgs:[26],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"15",hora:"Rysy",v:"2499",z:"Polsko",d:"21. 9. 2024",imgs:[27,28],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"16",hora:"Galdhøpiggen",v:"2469",z:"Norsko",d:"7. 7. 2022",imgs:[29,30],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"17",hora:"Bosanski Maglić",v:"2386",z:"Bosna a Hercegovina",imgs:[31,32],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"18",hora:"Midžur",v:"2169",z:"Srbsko",imgs:[33],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"19",hora:"Hvannadalshnjúkur",v:"2110",z:"Island",imgs:[34,35],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"20",hora:"Kebnekaise",v:"2103",z:"Švédsko",imgs:[36,37],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"21",hora:"Hoverla",v:"2061",z:"Ukrajina",imgs:[38,39],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"22",hora:"Torre",v:"1993",z:"Portugalsko",d:"28. 3. 2025",imgs:[40],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"23",hora:"Narodnaja",v:"1895",z:"Rusko",imgs:[41],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"24",hora:"Sinjal",v:"1831",z:"Chorvatsko",imgs:[42,43],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"25",hora:"Sněžka",v:"1603",z:"Česko",imgs:[44,45,46],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"26",hora:"Ben Nevis",v:"1344",z:"Spojené království",imgs:[47,48],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"27",hora:"Halti",v:"1324",z:"Finsko",imgs:[49],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"28",hora:"Carrauntoohil",v:"1041",z:"Irsko",imgs:[50,51],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"29",hora:"Mahya Dağı",v:"1031",z:"Turecko",imgs:[52],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"30",hora:"Kékes",v:"1014",z:"Maďarsko",d:"17. 8. 2023",imgs:[53,54],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"31",hora:"Monte Titano",v:"756",z:"San Marino",imgs:[55,56],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"32",hora:"Signal de Botrange",v:"694",z:"Belgie",d:"6. 10. 2024",imgs:[57],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"33",hora:"Kneiff",v:"560",z:"Lucembursko",d:"6. 10. 2024",imgs:[58],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"34",hora:"Dealul Bălănești",v:"430",z:"Moldavsko",imgs:[59],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"35",hora:"Dzjaržynskaja hara",v:"345",z:"Bělorusko",imgs:[60],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"36",hora:"Vaalserberg",v:"322",z:"Nizozemsko",d:"6. 10. 2024",imgs:[61,62],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"37",hora:"Suur Munamägi",v:"318",z:"Estonsko",imgs:[63],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"38",hora:"Gaiziņkalns",v:"312",z:"Lotyšsko",imgs:[64],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"39",hora:"Aukštojas",v:"294",z:"Litva",imgs:[65],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"40",hora:"Ta' Dmejrek",v:"253",z:"Malta",imgs:[66],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"41",hora:"Møllehøj",v:"171",z:"Dánsko",imgs:[67],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"42",hora:"Chemin des Révoires",v:"161",z:"Monako",imgs:[68],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"43",hora:"Vatikánské zahrady",v:"75",z:"Vatikán",imgs:[69],povidani:"Popis výstupu bude ještě doplněn"}
 ];
 
 /* ---------- Data: Alpy 4000 ----------
