--- a/index.html
+++ b/index.html
@@ -81,19 +81,21 @@ main{padding:60px 0 80px;}
 
 /* Fullscreen modal */
 .modal-backdrop{
-  position:fixed;inset:0;background:rgba(0,0,0,0.85);
+  position:fixed;inset:0;background:rgba(0,0,0,0.9);
   display:flex;justify-content:center;align-items:center;
   z-index:10000;padding:24px;
-  opacity:0;pointer-events:none;transition:opacity .2s;
+  opacity:0;pointer-events:none;transition:opacity .25s;
 }
 .modal-backdrop.show{opacity:1;pointer-events:auto;}
 .modal{
   position:relative;
   width:100%;height:100%;
   display:flex;align-items:center;justify-content:center;
+  flex-direction:column;
+  text-align:center;
 }
 .modal img{
-  max-width:95vw;max-height:90vh;
+  max-width:95vw;max-height:75vh;
   object-fit:contain;
   border-radius:10px;
   opacity:0;transition:opacity .3s;
@@ -104,6 +106,15 @@ main{padding:60px 0 80px;}
   font-size:20px;font-weight:700;
   text-shadow:0 2px 5px rgba(0,0,0,0.8);
 }
+.modal-info{
+  max-width:800px;
+  margin-top:18px;
+  text-align:left;
+  font-size:14px;
+  color:rgba(255,255,255,0.9);
+  line-height:1.6;
+}
+.modal-info strong{color:white;}
 .modal-close{
   position:absolute;top:18px;right:24px;
   background:none;border:none;color:white;
@@ -149,6 +160,7 @@ footer{text-align:center;color:rgba(255,255,255,0.6);padding:30px 0;}
   </div>
 </main>
 
+<!-- 🔹 přidáno info box -->
 <div id="modal-backdrop" class="modal-backdrop" hidden>
   <div class="modal">
     <button class="nav-arrow left" id="nav-left">❮</button>
@@ -156,6 +168,7 @@ footer{text-align:center;color:rgba(255,255,255,0.6);padding:30px 0;}
     <h3 id="modal-title"></h3>
     <button class="modal-close" id="modal-close">✕</button>
     <img id="modal-img" src="">
+    <div id="modal-info" class="modal-info"></div>
   </div>
 </div>
 
@@ -303,7 +316,6 @@ const alpyData = [
 /* ---------- Data: Nepál ---------- */
 const nepalData = Array.from({length:40},(_,i)=>({idx:i,title:`Nepál ${i+1}`,img:imgNepal(i+1)}));
 
-/* --- render --- */
 function resolveImgs(it,i){return (Array.isArray(it.imgs)&&it.imgs.length)?it.imgs:[i+1];}
 function card(it,i,srcFn,arr,type){
   const imgs=resolveImgs(it,i);
@@ -327,7 +339,6 @@ renderGallery('koruna-gallery',korunaData,(it,i)=>card(it,i,imgKoruna,korunaData
 renderGallery('alpy-gallery',alpyData,(it,i)=>card(it,i,imgAlpy,alpyData,'alpy'));
 renderGallery('nepal-gallery',nepalData,(it,i)=>card(it,i,imgNepal,nepalData,'nepal'));
 
-/* --- navigace --- */
 const btns=document.querySelectorAll('.btn');
 const sections=document.querySelectorAll('[data-route-content]');
 function show(route){
@@ -359,15 +370,14 @@ function updateModal(first=false){
   setTimeout(()=>{
     img.src=currentSrc(photoId);
     title.textContent=`${it.hora} (${currentIndex+1}/${currentArr.length}) • foto ${currentPhotoIndex+1}/${imgs.length}`;
-    const povidani=it.povidani||"Popis výstupu bude doplněn.";
     info.innerHTML=`
       ${it.z?`<strong>Země:</strong> ${it.z}<br>`:""}
-      ${it.d?`<strong>Datum výstupu:</strong> ${it.d}<br>`:""}
-      ${it.cas?`<strong>Čas výstupu:</strong> ${it.cas}<br>`:""}
+      ${it.d?`<strong>Datum:</strong> ${it.d}<br>`:""}
+      ${it.cas?`<strong>Čas:</strong> ${it.cas}<br>`:""}
       ${it.team?`<strong>Tým:</strong> ${it.team}<br>`:""}
       ${it.obt?`<strong>Obtížnost:</strong> ${it.obt}<br>`:""}
       ${it.pohori?`<strong>Pohoří:</strong> ${it.pohori}<br>`:""}
-      <br>${povidani}`;
+      <br>${it.povidani||"Popis výstupu bude doplněn."}`;
     img.onload=()=>img.classList.add('show');
   },first?0:150);
 }
@@ -390,13 +400,12 @@ document.getElementById('nav-right').onclick=e=>{e.stopPropagation();changeModal
 document.getElementById('modal-close').onclick=closeModal;
 modal.onclick=e=>{if(e.target===modal)closeModal();};
 
-/* --- gesta + klávesnice --- */
 let sx=0,sy=0,ex=0,ey=0;
 modal.addEventListener('touchstart',e=>{sx=e.changedTouches[0].screenX;sy=e.changedTouches[0].screenY;});
 modal.addEventListener('touchend',e=>{
   ex=e.changedTouches[0].screenX;ey=e.changedTouches[0].screenY;
   const dx=ex-sx,dy=ey-sy;
-  if(Math.abs(dx)>Math.abs(dy)){if(Math.abs(dx)>50){dx>0?changeModal(-1):changeModal(1);}}
+  if(Math.abs(dx)>Math.abs(dy)){if(Math.abs(dx)>50){dx>0?changeModal(-1):changeModal(1);} }
   else if(Math.abs(dy)>60)closeModal();
 });
 document.addEventListener('keydown',e=>{
